css/style.css
/* ... */
body .wrapper > main > .main-page_info {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding-right: 30px;
  margin-left: 86px;
  width: 50%;
  height: 100%;
}

body .wrapper > main > .main-page_info > header {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: space-between;
  z-index: 2;
  width: 205%;
  padding-top: 25px;
}

body .wrapper > main > .main-page_info > header > .logo-icon {
  max-width: 200px;
  max-height: 55px;
}

body .wrapper > main > .main-page_info > header > .main-page_contacts {
  display: flex;
  align-items: center;
  margin-left: auto;
  min-width: 120px;
  line-height: 25px;
  color: #000000;
}

body .wrapper > main > .main-page_info > header > .main-page_contacts > .contact-icon {
  margin-right: 9px;
  max-width: 24px;
  max-height: 24px;
}

body .wrapper > main > .main-page_info > header > .main-page_contacts:hover {
  color: #F9572E;
}

body .wrapper > main > .main-page_info > .info-arrows-anchor a {
  display: flex;
  align-items: center;
  margin-bottom: 20px;
  cursor: pointer;
}

body .wrapper > main > .main-page_info > .info-arrows-anchor a > svg {
  max-width: 41px;
  max-height: 30px;
}

body .wrapper > main > .main-page_info > .info-arrows-anchor a > span {
  max-width: 200px;
  margin-left: 12.5px;
  line-height: 112%;
  letter-spacing: -0.01px;
  color: #F9572E;
}

body .wrapper > main > .main-page_info > .info-arrows-anchor:hover a > svg {
  transform: scaleX(0.8);
}

body .wrapper > main > .main-page_info > .info-header > h1 {
  line-height: 100%;
  letter-spacing: -0.5px;
  color: #000000;
}

body .wrapper > main > .main-page_info > .info-header > p {
  max-width: 460px;
  margin: 27px 0 44px 0;
  line-height: 143%;
  letter-spacing: -0.01px;
}

body .wrapper > main > .main-page_info > .info-header > .info-anchor > a {
  line-height: 18px;
  color: #fff;
  padding: 17px 30px;
  background: #F9572E;
  box-shadow: 0px 7px 15px rgba(249, 87, 46, 0.6);
  border-radius: 50px;
}

body .wrapper > main > .main-page_info > .info-header > .info-anchor > a:hover {
  background: #FF7B59;
  box-shadow: 0px 15px 20px rgba(249, 87, 46, 0.7);
}

body .wrapper > main > .main-page_info > .info-header > .info-anchor > span {
  margin-left: 31px;
  line-height: 150%;
  letter-spacing: -0.01px;
  color: #666666;
}

body .wrapper > main > .main-page_video {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
  background-image: url("../img/img.png");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}

body .wrapper > main > .main-page_video > .play-button {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  cursor: pointer;
}

body .wrapper > main > .main-page_video > .play-button > .play-icon {
  position: relative;
  width: 250px;
  height: 250px;
}

body .wrapper > main > .main-page_video > .play-button > .play-icon svg {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
  width: 250px;
  height: 250px;
}

body .wrapper > main > .main-page_video > .play-button > .play-icon > .rectangle {
  transform: translateX(-40%) translateY(-50%);
  max-width: 45%;
}

body .wrapper > main > .main-page_video > .play-button > span {
  padding-top: 15px;
  line-height: 30px;
  color: #F9572E;
}

body .wrapper > main > .main-page_video > .play-button:hover .rectangle {
  transform: translateX(-40%) translateY(-50%) scale(1.2);
}

body .wrapper > .info-card {
  margin-top: 166px;
  padding: 0 24%;
}

body .wrapper > .info-card > .info-card-header > h2 {
  letter-spacing: -0.1px;
  margin-bottom: 8px;
}

body .wrapper > .info-card > .info-card-header > span {
  letter-spacing: 0.62px;
  text-transform: uppercase;
  color: #33B5A3;
}

body .wrapper > .info-card > .info-card-wrapper {
  display: flex;
  justify-content: space-between;
  margin-top: 63px;
}

body .wrapper > .info-card > .info-card-wrapper .card {
  padding: 33px 0 96px 0;
  border-top: 4px solid #63D2C1;
}

body .wrapper > .info-card > .info-card-wrapper .card > h3 {
  line-height: 133%;
}

body .wrapper > .info-card > .info-card-wrapper .card > p {
  padding-top: 12px;
  line-height: 150%;
  color: #666666;
}

body .wrapper > .info-card > .info-card-wrapper > .info-card-left {
  width: 50%;
  margin-right: 40px;
}

body .wrapper > .info-card > .info-card-wrapper > .info-card-right {
  width: 50%;
  margin-left: 40px;
}

body .wrapper > .info-card > .info-card-wrapper > .info-card-right > .accent-card {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 40px 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  border: 4px solid #63D2C1;
}

body .wrapper > .info-card > .info-card-wrapper > .info-card-right > .accent-card > div {
  text-align: center;
}

body .wrapper > .interior-style-screen {
  margin-top: 184px;
}

body .wrapper > .interior-style-screen .interior-style-header {
  padding: 0 24%;
}

body .wrapper > .interior-style-screen .interior-style-header > h2 {
  letter-spacing: -0.1px;
  margin-bottom: 8px;
}

body .wrapper > .interior-style-screen .interior-style-header > span {
  letter-spacing: 0.62px;
  text-transform: uppercase;
  color: #33B5A3;
}

body .wrapper > .interior-style-screen > .slider {
  position: relative;
  overflow: hidden;
  margin-top: 50px;
}

body .wrapper > .interior-style-screen > .slider > .slider-track {
  display: flex;
}

body .wrapper > .interior-style-screen > .slider > .slider-track > .slider-item {
  top: 0;
  position: absolute;
  display: flex;
}

body .wrapper > .interior-style-screen > .slider > .slider-track > .slider-item > img {
  -o-object-fit: contain;
  object-fit: contain;
}

body .wrapper > .interior-style-screen > .slider > .slider-track > .slider-item > span {
  padding-left: 17px;
  line-height: 154%;
  color: #666666;
}
/* ... */

